--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/cozy/cozy-template.git"
+    "url": "https://CPatchane@bitbucket.org/CPatchane/cozyportfolio.git"
   },
   "main": "server.js",
   "dependencies": {
