--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "selfPortfolio",
+  "name": "cozy-portfolio",
   "version": "1.0.0",
   "engines": [
     "node >= 0.10.0"
   ],
-  "description": "myPortfolio will allow to create your portfolio automatically with information from DoYouBuzz, OpenBadges and Mahara.",
+  "description": "myPortfolio will allow to create your portfolio automatically with information from DoYouBuzz and OpenBadges",
   "license": "MIT",
   "repository": {
     "type": "git",
