--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "americano": "0.4.2",
     "americano-cozy": "^0.2.11",
     "cozydb": "0.1.3",
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "request": "^2.67.0"
   },
   "devDependencies": {
     "should": "7.1.1",
