--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "display-name": "Portfolio",
   "version": "1.0.0",
   "author": "Cédric Patchane Lacane",
-  "engines": [
-    "node >= 4.3.0"
-  ],
+  "engine": {
+    "node": "*"
+  },
   "description": "Create your portfolio on your Cozy Cloud with the possibility to grab information from DoYouBuzz and OpenBadges",
   "license": "AGPL-3.0",
   "repository": {
