identifier change in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cozy-portfolio",
+  "name": "portfolio",
   "cozy-displayName": "Portfolio",
   "version": "1.0.0",
   "author": "Cédric Patchane Lacane",
