--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   "main": "server.js",
   "dependencies": {
     "americano": "0.4.2",
-    "americano-cozy": "^0.2.11",
     "cozydb": "0.1.3",
     "jade": "^1.11.0",
     "request": "^2.67.0"
@@ -47,7 +46,7 @@
     "badgesGroup": {
       "description": "All badges informations (OpenBadges)"
     },
-    "accountSettings": {
+    "accounts": {
       "description": "Informations needed for DoYouBuzz API and OpenBadges Backpack API"
     }
   }
