--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "americano": "0.4.2",
     "cozydb": "0.1.3",
     "jade": "^1.11.0",
-    "request": "^2.67.0"
+    "request": "^2.67.0",
+    "request-json-light": "^0.5.25"
   },
   "devDependencies": {
     "should": "7.1.1",
@@ -37,7 +38,7 @@
     "start": "node server.js"
   },
   "cozy-permissions": {
-    "portfolioUser" : {
+    "portfolioUser": {
       "description": "Informations about user profil"
     },
     "portfolioDocument": {
